--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
     <string name="app_name">PlantDiary</string>
-    
+
     <string name="PROMPT_defineplant_potsize">Topfgröße</string>
     <string name="PROMPT_defineplant_location">Standort</string>
     <string name="PROMPT_defineplant_name">Name</string>
     <string name="PROMPT_defineplant_type">Typ</string>
-    
+    <string name="PROMPT_defineplant_acqtyp">Akquisitionsart</string>
+
     <string name="FLAG_err">"ERROR</string>
+    <string name="PROMT_defineplant_comment">Kein Kommentar?</string>
+
+
 </resources>
