added latin name, added light color scheme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="PROMPT_defineplant_date">In Besitz seit</string>
     <string name="PROMPT_defineplant_stage">Zyklus</string>
     <string name="PROMPT_defineplant_preex">Pre-Existing?</string>
+    <string name="PROMPT_defineplant_namelat">Lat. Name</string>
     <string name="LBL_defineplant_preex">Pre-Existing</string>
 
     <string name="FLAG_err">"ERROR</string>
